<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/android_lar"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clipToOutline="true"

    >

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="78dp"
        android:layout_marginTop="498dp"
        android:checked="true"

        />

    <TextView
        android:id="@+id/log_in"
        android:layout_width="303dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="549dp"
        android:background="@drawable/rectangle_create_account"
        android:gravity="center"
        android:text="@string/log_in"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="333dp"
        android:background="@drawable/rectangle_login"
        android:drawablePadding="12dp"
        android:gravity="center"
        android:text="@string/password"
        android:textColor="@color/partialgrey"
        android:textSize="16sp"

        />

    <TextView
        android:id="@+id/votapp3"
        android:layout_width="119dp"
        android:layout_height="39dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="282dp"
        android:layout_marginTop="6dp"
        android:gravity="top"


        android:text="@string/votapp"
        android:textAppearance="@style/votapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/login"
        android:layout_width="92dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="126dp"
        android:gravity="top"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="32sp" />


    <!-- veuillez saisir vos identifiants de connexion -->
    <TextView
        android:id="@+id/mot_de_pass"
        android:layout_width="154dp"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="207dp"
        android:layout_marginTop="435dp"
        android:gravity="top"
        android:text="@string/mot_de_pass"
        android:textColor="@color/partialgrey"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/veuillez_sa"
        android:layout_width="299dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="21dp"
        android:layout_marginTop="181dp"
        android:gravity="top"
        android:text="@string/veuillez_sa"
        android:textColor="@color/partialgrey"
        android:textSize="14sp" />

    <!-- Garder moi connecter -->

    <TextView
        android:id="@+id/garder_moi_"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="118dp"
        android:layout_marginTop="497dp"
        android:gravity="top"
        android:text="@string/garder_moi_"
        android:textColor="@color/partialgrey"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/email_addre"
        android:layout_width="310dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="232dp"
        android:background="@drawable/rectangle_login"
        android:drawablePadding="12dp"
        android:gravity="center"
        android:text="@string/email_addre"
        android:textColor="@color/partialgrey"
        android:textSize="16sp"

        />

</RelativeLayout>